--- a/backend/package.json
+++ b/backend/package.json
@@ -11,17 +11,17 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "strapi": "3.4.6",
-    "strapi-admin": "3.4.6",
-    "strapi-utils": "3.4.6",
-    "strapi-plugin-content-type-builder": "3.4.6",
-    "strapi-plugin-content-manager": "3.4.6",
-    "strapi-plugin-users-permissions": "3.4.6",
-    "strapi-plugin-email": "3.4.6",
-    "strapi-plugin-upload": "3.4.6",
-    "strapi-connector-bookshelf": "3.4.6",
-    "knex": "<0.20.0",
-    "sqlite3": "5.0.0"
+    "strapi": "3.5.0",
+    "strapi-admin": "3.5.0",
+    "strapi-utils": "3.5.0",
+    "strapi-plugin-content-type-builder": "3.5.0",
+    "strapi-plugin-content-manager": "3.5.0",
+    "strapi-plugin-users-permissions": "3.5.0",
+    "strapi-plugin-email": "3.5.0",
+    "strapi-plugin-upload": "3.5.0",
+    "strapi-connector-bookshelf": "3.5.0",
+    "knex": "^0.21.17",
+    "sqlite3": "5.0.2"
   },
   "author": {
     "name": "A Strapi developer"
